change package.json which is name:

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vivek Chauhan OS",
+  "name": "vivekchauhan-os",
   "version": "2.0.0",
   "description": "Desktop environment in the browser",
   "author": {
